--- a/Clients/CryptoSavings.Angular/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Clients/CryptoSavings.Angular/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -7,7 +7,7 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]='["/"]'>CryptoSavings.Angular</a>
+            <a class='navbar-brand' [routerLink]='["/"]'>Crypto Savings</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse' [ngClass]='{ "in": isExpanded }'>
